crates/pardosa-schema/tests/compile_fail/evt_005.rs
use pardosa_schema::GenomeSafe;
use serde::Serialize;
#[derive(Serialize, GenomeSafe)]
struct BadStruct {
    n: isize,
}
fn main() {}
