crates/pardosa-schema/tests/compile_fail/evt_005.stderr
error: EVT-005: GenomeSafe: isize has platform-dependent size. Use i32/i64 for portable serialization.
 --> tests/compile_fail/evt_005.rs:5:8
  |
5 |     n: isize,
  |        ^^^^^
